Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6, 10.10(EOL), 10.11, 11.0(EOL), 11.1(EOL)
-
None
Description
Error log contains
2023-09-07 23:01:37 4 [ERROR] InnoDB: Cannot add field `f32` in table `mysqld.1`.`#sql-temptable-60cc-4-f` because after adding it, the row size is 8187 which is greater than maximum allowed size (8126 bytes) for a record on index leaf page.
|
instead of
2023-09-07 23:01:37 4 [ERROR] InnoDB: Cannot add field `f32` in table `test`.`t1` because after adding it, the row size is 8187 which is greater than maximum allowed size (8126 bytes) for a record on index leaf page.
|