MDEV-32128 wrong table name in innodb's "row too big" errors